RESOLVED FIXED113023
[Curl] Performance fix, avoid loading cookie file on every request.
https://bugs.webkit.org/show_bug.cgi?id=113023
Summary [Curl] Performance fix, avoid loading cookie file on every request.
peavo
Reported 2013-03-22 02:02:40 PDT
We currently load the cookie file on every request, and when reading cookies from JavaScript, by using the option CURLOPT_COOKIEFILE. This is very inefficient as the cookie file can get quite large, and file I/O is slow. It is sufficient to load the cookie file on startup, as we use a shared cookie database between the requests.
Attachments
Patch (3.14 KB, patch)
2013-03-22 02:21 PDT, peavo
no flags
peavo
Comment 1 2013-03-22 02:21:07 PDT
Brent Fulgham
Comment 2 2013-03-22 09:20:52 PDT
Comment on attachment 194481 [details] Patch r=me
WebKit Review Bot
Comment 3 2013-03-22 09:24:52 PDT
Comment on attachment 194481 [details] Patch Clearing flags on attachment: 194481 Committed r146621: <http://trac.webkit.org/changeset/146621>
WebKit Review Bot
Comment 4 2013-03-22 09:24:55 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 5 2013-03-22 16:11:16 PDT
(In reply to comment #2) > (From update of attachment 194481 [details]) > r=me Thanks for reviewing ;)
Note You need to log in before you can comment on or make changes to this bug.